# Computer-Vision

./: .gitignore  README.md
Lab_1/: Functions.cpp  Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  functions.h  header.h
Lab_2/: CMakeLists.txt  Functions.cpp  ImageFilters.cpp  ImageFilters.h  Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  Task6.cpp  functions.h  header.h
Lab_3/: CMakeLists.txt  Functions.cpp  Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  Task6.cpp  functions.h  header.h
Lab_4/: CMakeLists.txt  Functions.cpp  Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  functions.h  header.h
Lab_5/: CMakeLists.txt  Functions.cpp  Task1.cpp  Task2.cpp  Task3.cpp  functions.h  header.h
Lab_6/: CMakeLists.txt
Lab_6/include/: functions.h  header.h
Lab_6/src/: Functions.cpp  Task1.cpp
Lab_7/: CMakeLists.txt
Lab_7/PanoramicUtils/: panoramic_utils.cpp
Lab_7/PanoramicUtils/old/: panoramic_utils.h
Lab_7/include/: Panorama.h  header.h  utils.h
Lab_7/src/: Panorama.cpp  Panorama_app.cpp  Utils.cpp
